--- a/in-class-demos/wk10-open-hdf4-python.ipynb
+++ b/in-class-demos/wk10-open-hdf4-python.ipynb
@@ -51,7 +51,9 @@
     "nested, you will see that loops will become important to open and explore the \n",
     "reflectance data stored within the h4 file. \n",
     "\n",
-    "To begin, create a path to your hdf file."
+    "To begin, create a path to your hdf file.\n",
+    "\n",
+    "* *tom was here*"
    ]
   },
   {
